--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
+          <button id="copy" class="btn" disabled>Copy Password</button>
         </div>
       </div>
     </div>
